<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Swachh Bharat</string>
    <string name="action_add_request">Add Request</string>
    <string name="action_logout">Logout</string>
    <string name="album_name">Swachh_Bharat</string>
    <string name="take_picture_button_text">Take Picture</string>
    <string name="submit_request_button_text">Submit Request</string>
    <string name="image_view_picture_taken_desc">Picture taken</string>
    <string name="title_activity_spotfix_request">Add Spotfix Request</string>
    <string name="action_settings">Settings</string>
    <string name="spotfix_title_text">Title</string>
    <string name="spotfix_description_text">Description</string>
    <string name="spotfix_estimated_hours_text">Estimated Hours</string>
    <string name="spotfix_estimated_people_text">Estimated People</string>
    <string name="spotfix_fix_date_text">Fixing Date</string>
    <string name="spotfix_fix_date_selected_text">Select by clicking button below</string>
    <string name="spotfix_fix_date_button_text">Select Date</string>
    <string name="spotfix_fix_time_button_text">Select Time</string>
    <string name="spotfix_take_picture_button_text">Take Picture</string>

    <string name="send">Send</string>

    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="image_content_description">This image was taken by the user</string>
    <string name="user_policy_option_string">Allow taking pictures</string>
    <string name="toggle_turn_on">Yes</string>
	<string name="toggle_turn_off">No</string>
	<string name="send_image_policy_button_text">Send Info</string>
	<string name="send_image_policy_button">Send Info</string>

    <string name="create_account_link">Create an account</string>
    <string name="login_button">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="create_account_button">Create Account</string>

    <string name="settings_button">Settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="gps_dialog_message">GPS is not enabled. Do you want to enable?</string>
    <string name="gps_dialog_title">GPS Settings</string>
    <string name="title_activity_view_spotfix">Spotfix Details</string>

</resources>
